kubernetes/jmeter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jmeter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jmeter
        company: PingIdentity
      name: jmeter
    spec:
      containers:
      - args:
        - --nongui
        - -t /opt/apache-jmeter/bin/client_credentials.jmx.jmx
        - -JthreadCount=100
        - -Jduration=3000
        - -JpfHost=pingfederate
        - -JapplicationName=1
        - --logfile result.jtl
        image: pingidentity/apache-jmeter:edge
        imagePullPolicy: Always
        name: jmeter
        ports:
        - containerPort: 1099
          protocol: TCP
        - containerPort: 50000
          protocol: TCP
        resources:
          limits:
            cpu: 6
            memory: 10Gi
          requests:
            cpu: 6
            memory: 10Gi
