kubernetes/cluster.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: pf-cluster-console
  labels:
    app: pf-cluster
    tier: console
spec:
  replicas: 1
  selector:
      matchLabels:
        app: pf-cluster
        tier: console
  template:
    metadata:
      labels:
        app: pf-cluster
        tier: console
    spec:
      containers:
      - name: console-node
        image: gcr.io/ping-identity/pingfederate:10.0.0-Beta-centos-edge
        ports:
        - containerPort: 9999
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  name: pf-cluster-engine
  labels:
    app: pf-cluster
    tier: engine
spec:
  replicas: 1
  selector:
      matchLabels:
        app: pf-cluster
        tier: engine
  template:
    metadata:
      labels:
        app: pf-cluster
        tier: engine
    spec:
      containers:
      - name: engine-node
        image: gcr.io/ping-identity/pingfederate:10.0.0-Beta-centos-edge
        ports:
        - containerPort: 9031
        resources:
          requests:
            memory: "1.5Gi"
            cpu: "1"
          limits:
            memory: "1.5Gi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  name: pf-cluster-dns
  labels:
    run: pf-cluster
spec:
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: bind-port
      port: 7600
      protocol: TCP
      targetPort: 7600
  selector:
     app: pf-cluster
---
apiVersion: v1
kind: Service
metadata:
  name: pf-console-lb
  labels:
    app: pf-cluster
    tier: console
spec:
  ports:
  - port: 9999
    protocol: TCP
    targetPort: 9999
  selector:
    app: pf-cluster
    tier: console
  sessionAffinity: None
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pf-engine-lb
  labels:
    app: pf-cluster
    tier: engine
spec:
  ports:
  - port: 9031
    protocol: TCP
    targetPort: 9031
  selector:
    app: pf-cluster
    tier: engine
  sessionAffinity: None
  type: LoadBalancer
