kubernetes/pingfederate.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingfederate
spec:
  selector:
    app: pingfederate
  ports:
    - port: 9999
      name: pf-console
      targetPort: 9999
    - port: 9031
      name: pf-runtime
      targetPort: 9031
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingfederate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingfederate
  template:
    metadata:
      name: pingfederate
      labels:
        app: pingfederate
    spec:
      containers:
        - name: pingfederate
          image: gcr.io/ping-identity/pingfederate:10.0.0-Beta-alpine-edge
          ports:
            - containerPort: 9999
            - containerPort: 9031
          resources:
            requests:
              memory: "1.5Gi"
              cpu: "1"
            limits:
              memory: "1.5Gi"
              cpu: "1"
